2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/type_detail.php: Fixes on the ticket
	type item update when selecting the 'global field' option.
	
2015-09-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_type_field.php
	  operation/incidents/type_detail.php: Minor improvements.
	
2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_form.php: Fixed (or improved) the regex
	to transform the plain text links into html links into the
	function 'show_workunit_data'.
	
	* operation/incidents/incident_workunits.php: Improved the
	javascript scope management.
	
2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_db.php,
	  include/functions_incidents.php,
	  include/integria_cron.php: Now the '_access_url_' macro
	is replaced properly when the 'access_public' property exists.

2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria.css: Style fix of the fileupload.
	Ticket #2376.
	
2015-09-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/js/integria_inventory.js: Fixed an anoying effect
	when navigating through the inventory tree.
	
	* operation/inventories/inventory_search.php: Now some
	inventory items are shown properly when their 'id_object_type'
	is 'NULL'.
	
	* include/functions_inventories.php: Improved the result output
	of the function 'inventories_get_info'.
	
2015-08-31  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria.css: Added a new table style.

2015-08-31  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/inventories/inventory_search.php,
	  include/js/integria_inventory.js,
	  include/ajax/inventories.php,
	  include/functions_inventories.php: Added code to handle
	the new module for unfo boxes into the inventory tree view.

2015-08-31  Alejandro Gallardo <alejandro.gallardo@artica.es>
	